@@ -16,7 +16,8 @@ Post-v2.13.0
        by enabling interrupt mode.
    - Userspace datapath:
      * Add support for conntrack zone-based timeout policy.
-
+   - Bareudp Tunnel
+     * Userspace datapath support is not added.
 
 v2.13.0 - 14 Feb 2020
 ---------------------
